--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,36 +2,20 @@
 <html>
 <head>
 <style>
-.button {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
-
-.button2 {background-color: #008CBA;} /* Blue */
-.button3 {background-color: #f44336;} /* Red */ 
-.button4 {background-color: #e7e7e7; color: black;} /* Gray */ 
-.button5 {background-color: #555555;} /* Black */
-</style>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<p> Welcome to the Invasatory home page.
 
-<h2>Button Colors</h2>
+In this place I Show off my Invasatory Wiki, A bit about me and some projects Im also working on.
 
-<p>Change the background color of a button with the background-color property:</p>
+Home: <a href='https://www.freecodecamp.org/'><button><class="button">Home</button></a>
+Bio: <button class="button">
+Other Projects: <button class="button">
+Links: <button class="button">
 
-<button class="button">Green</button>
-<button class="button button2">Blue</button>
-<button class="button button3">Red</button>
-<button class="button button4">Gray</button>
-<button class="button button5">Black</button>
+I hope you have a great day, and have fun exploring
+</p>
 
 </body>
 </html>
