--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,13 +3,14 @@
 <head>
 <style>
 <link rel="stylesheet" href="styles.css">
+</style>
 </head>
 <body>
 <p> Welcome to the Invasatory home page.
 
 In this place I Show off my Invasatory Wiki, A bit about me and some projects Im also working on.
 
-Home: <a href='https://www.freecodecamp.org/'><button><class="button">Home</button></a>
+Home: <a href="index.html"><button><class="button">Home</button></a>
 Bio: <button class="button">
 Other Projects: <button class="button">
 Links: <button class="button">
