--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,19 +2,22 @@
 <html>
 <head>
 <style>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="1234.css">
 </style>
 </head>
 <body>
-<p> Welcome to the Invasatory home page.
+<p>
+  
+  
+  
+  Welcome to the Invasatory home page.
 
 In this place I Show off my Invasatory Wiki, A bit about me and some projects Im also working on.
 
 Home: <a href="index.html"><button><class="button">Home</button></a>
-Bio: <button class="button">
-Other Projects: <button class="button">
-Links: <button class="button">
-
+Bio: <a href="index.html"><button><class="button">Bio</button></a>
+Other Projects: <a href="index.html"><button><class="button">Other projects</button></a>
+Links: <a href="index.html"><button><class="button">Links</button></a>
 I hope you have a great day, and have fun exploring
 </p>
 
