--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,9 +15,9 @@
 In this place I Show off my Invasatory Wiki, A bit about me and some projects Im also working on.
 
 Home: <a href="index.html"><button><class="button">Home</button></a>
-Bio: <a href="index.html"><button><class="button">Bio</button></a>
-Other Projects: <a href="index.html"><button><class="button">Other projects</button></a>
-Links: <a href="index.html"><button><class="button">Links</button></a>
+Bio: <a href="bio.html"><button><class="button">Bio</button></a>
+Other Projects: <a href="otherprojects.html"><button><class="button">Other projects</button></a>
+Links: <a href="links.html"><button><class="button">Links</button></a>
 I hope you have a great day, and have fun exploring
 </p>
 
