--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,17 +2,14 @@
 <html>
 <head>
 <style>
-<link rel="stylesheet" href="1234.css">
+<link type="text/css" rel="stylesheet" href="styles.css" />
 </style>
 </head>
 <body>
 <p>
-  
-  
-  
-  Welcome to the Invasatory home page.
-
-In this place I Show off my Invasatory Wiki, A bit about me and some projects Im also working on.
+ <br> 
+ Welcome to the Invasatory home page.
+  In this place I Show off my Invasatory Wiki, A bit about me and some projects Im also working on.
 
 Home: <a href="index.html"><button><class="button">Home</button></a>
 Bio: <a href="bio.html"><button><class="button">Bio</button></a>
