--- a/public_html/links.html
+++ b/public_html/links.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+<link type="text/css" rel="stylesheet" href="https://github.com/Obiwanjakobi5031/repositoryintro-/blob/version-1/public_html/styles.css" />
+</style>
+</head>
+<body>
+<p>
+ <br> 
+ Welcome to the Invasatory home page.
+  In this place I Show off my Invasatory Wiki, A bit about me and some projects Im also working on.
+
+Home: <a href="index.html"><button><class="button">Home</button></a>
+Bio: <a href="bio.html"><button><class="button">Bio</button></a>
+Other Projects: <a href="otherprojects.html"><button><class="button">Other projects</button></a>
+Links: <a href="links.html"><button><class="button">Links</button></a>
+</p>
+
+</body>
+</html>
 
