--- a/public_html/otherprojects.html
+++ b/public_html/otherprojects.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <style>
-<link type="text/css" rel="stylesheet" href="https://github.com/Obiwanjakobi5031/repositoryintro-/blob/version-1/public_html/styles.css" />
+<link type="text/css" rel="stylesheet" href="styles.css" />
 </style>
 </head>
 <body>
