--- a/public_html/otherprojects.html
+++ b/public_html/otherprojects.html
@@ -8,8 +8,11 @@
 <body>
 <p>
  <br> 
- Welcome to the Invasatory home page.
-  In this place I Show off my Invasatory Wiki, A bit about me and some projects Im also working on.
+ the Backrooms out of lego
+              (image top view, image side view, image inside view)
+              
+              The Backrooms is a fictional universe with infinitely generating hallways, yellow-mono wallpaper and moist carpets. This is a depiction of the ASYNC Corporation, made by SFX artist Kane Pixels.(shown bottom)
+
 
 Home: <a href="index.html"><button><class="button">Home</button></a>
 Bio: <a href="bio.html"><button><class="button">Bio</button></a>
