--- a/public_html/links.html
+++ b/public_html/links.html
@@ -5,11 +5,17 @@
 <link type="text/css" rel="stylesheet" href="https://github.com/Obiwanjakobi5031/repositoryintro-/blob/version-1/public_html/styles.css" />
 </style>
 </head>
-<body>
+<body> 
 <p>
  <br> 
- Welcome to the Invasatory home page.
-  In this place I Show off my Invasatory Wiki, A bit about me and some projects Im also working on.
+Links:
+
+<button a href="https://discord.gg/fND7uDcP">
+<br>
+<button> a href="https://join.slack.com/t/invasatorydev-kxk2106/shared_invite/zt-1rjqx9ukg-fmtxcbLImeDYF_YCaHawMg">
+ <br>
+ if you have any other questions, feel free to message me on gmail at triplem3008@gmail.com
+
 
 Home: <a href="index.html"><button><class="button">Home</button></a>
 Bio: <a href="bio.html"><button><class="button">Bio</button></a>
