--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,7 +2,43 @@
 <html>
 <head>
 <style>
-<link type="text/css" rel="stylesheet" href="https://github.com/Obiwanjakobi5031/repositoryintro-/blob/version-1/public_html/styles.css" />
+body { /* color green */
+  background-color: #23451e;
+}
+#p.cool { /* do class: p.cool later */
+  border: solid;
+  background-color: #FFFFFF; /* color white */
+}
+body { 
+  margin: 15px;
+}
+img { 
+  border: dashed;
+}
+#h1.cool { /* do class: h1.cool later */
+  padding: 50px;
+  border: solid;
+}
+a:link { /* color white */
+ color: #FFFFFF;
+}
+a:visited { /* color lightgreen */
+  color: #90EE90;
+}
+a:hover { /* color crimson */
+  color: #900C3F;
+}
+button {
+  background-color: #23451e; /* color green */
+  border: solid; 
+  color: #FFFFFF;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: underline;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: context-menu;
+}
 </style>
 </head>
 <body>
