--- a/public_html/links.html
+++ b/public_html/links.html
@@ -46,9 +46,9 @@ button {
  <br> 
 Links:
 
-<button a href="https://discord.gg/fND7uDcP">
+ <button a href="https://discord.gg/fND7uDcP">Discord Development server>
 <br>
-<button a href="https://join.slack.com/t/invasatorydev-kxk2106/shared_invite/zt-1rjqx9ukg-fmtxcbLImeDYF_YCaHawMg">
+<button a href="https://join.slack.com/t/invasatorydev-kxk2106/shared_invite/zt-1rjqx9ukg-fmtxcbLImeDYF_YCaHawMg">Slack Developement server>
  <br>
  if you have any other questions, feel free to message me on gmail at triplem3008@gmail.com
 
