--- a/public_html/links.html
+++ b/public_html/links.html
@@ -46,7 +46,7 @@ button {
  <br> 
 Links:
 
- <button a href="https://discord.gg/fND7uDcP">Discord Development server>
+ <button a href="https://discord.gg/fND7uDcP">Discord development server>
 <br>
 <button a href="https://join.slack.com/t/invasatorydev-kxk2106/shared_invite/zt-1rjqx9ukg-fmtxcbLImeDYF_YCaHawMg">Slack Developement server>
  <br>
