--- a/public_html/links.html
+++ b/public_html/links.html
@@ -4,6 +4,7 @@
 <style>
  body { /* color green */
   background-color: #23451e;
+  text-color: #FFFFFF;
 }
 #p.cool { /* do class: p.cool later */
   border: solid;
