--- a/public_html/links.html
+++ b/public_html/links.html
@@ -45,13 +45,14 @@ button {
 <body> 
 <p>
  <br> 
+ if you have any other questions, feel free to message me on gmail at triplem3008@gmail.com
 Links:
 
  <a href="https://discord.gg/fND7uDcP">Discord Development server</a>
 <br>
-<a href="https://join.slack.com/t/invasatorydev-kxk2106/shared_invite/zt-1rjqx9ukg-fmtxcbLImeDYF_YCaHawMg" Slack Developement server</a>
+<a href="https://join.slack.com/t/invasatorydev-kxk2106/shared_invite/zt-1rjqx9ukg-fmtxcbLImeDYF_YCaHawMg" "Slack Developement server"</a>
  <br>
- if you have any other questions, feel free to message me on gmail at triplem3008@gmail.com
+ 
 
 
 Home: <a href="index.html"><button><class="button">Home</button></a>
