--- a/public_html/links.html
+++ b/public_html/links.html
@@ -55,10 +55,10 @@ Links:
  
 
 
-Home: <a href="index.html"><button><class="button">Home</button></a>
-Bio: <a href="bio.html"><button><class="button">Bio</button></a>
-Other Projects: <a href="otherprojects.html"><button><class="button">Other projects</button></a>
-Links: <a href="links.html"><button><class="button">Links</button></a>
+ <a href="index.html"><button><class="button">Home</button></a>
+ <a href="bio.html"><button><class="button">Bio</button></a>
+ <a href="otherprojects.html"><button><class="button">Other projects</button></a>
+ <a href="links.html"><button><class="button">Links</button></a>
 </p>
 
 </body>
