--- a/public_html/links.html
+++ b/public_html/links.html
@@ -8,7 +8,8 @@
 }
 #p.cool { /* do class: p.cool later */
   border: solid;
-  background-color: #FFFFFF; /* color white */
+  background-color: #FFFFFF;/* color white */
+  color: #FFFFFF;
 }
 body { 
   margin: 15px;
@@ -50,7 +51,7 @@ Links:
 
  <a href="https://discord.gg/fND7uDcP">Discord Development server</a>
 <br>
-<a href="https://join.slack.com/t/invasatorydev-kxk2106/shared_invite/zt-1rjqx9ukg-fmtxcbLImeDYF_YCaHawMg" "Slack Developement server"</a>
+<a href="https://join.slack.com/t/invasatorydev-kxk2106/shared_invite/zt-1rjqx9ukg-fmtxcbLImeDYF_YCaHawMg" Slack Developement server</a>
  <br>
  
 
